# fast_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
src/: .flake8  conftest.py  dodo.py  entrypoint.sh  poetry.toml  pyproject.toml
src/common/: failure_handler.py  sqlalchemy_error_handler.py  views.py
src/common/clients/: __init__.py  rabbit_mq_client.py  redis_client.py  s3_client.py
src/common/commands/: models.json  set_database.py  trigger.sql
src/common/models/: __init__.py  base.py  entity.py  snapshot.py
src/common/repositories/: __init__.py  state.py
src/common/schemas/: __init__.py  abstract.py  common.py  state.py
src/common/tests/: dependencies.py  fixtures.py  functions.py
src/common/tests/functional/: endpoint_tests.py  idempotency_tests.py  rabbit_mq_client_tests.py  redis_client_tests.py  s3_client_tests.py  sqlalchemy_error_handler_tests.py
src/core/: celery.py  dependencies.py  main.py  settings.py
src/core/tests/functional/: app_tests.py  dependency_tests.py
src/db/: alembic.ini  alembic_classes.py  env.py
src/db/versions/: 2024_03_29_09_33_21_3ec93ca97cf9_initial_revision.py
src/domain/models/: __init__.py  configuration.py  configuration_snapshot.py
src/domain/tests/functional/: configuration_tests.py
src/faas/: dependencies.py  functions.py  views.py
src/faas/models/: __init__.py  email.py  email_snapshot.py  phone.py  phone_snapshot.py  user.py  user_snapshot.py
src/faas/repositories/: __init__.py  jwt_repository.py  user_repository.py
src/faas/schemas/: __init__.py  create_user.py  profile.py  sign_in.py
src/faas/tests/: fixtures.py
src/faas/tests/data/: strings.json
src/faas/tests/functional/user/: create_tests.py  profile_tests.py  sign_in_tests.py
src/faas/tests/unit/: user_tests.py
