[tool.ruff]
cache-dir = "/tmp/.ruff_cache"
[tool.ruff.lint]
select = [
    "F", "E", "W", "C90",
    "N", "UP", "YTT", "ASYNC",
    "TRIO", "BLE", "FBT", "B",
    "A", "COM", "C4", "DTZ",
    "T10", "DJ", "EM", "EXE",
    "FA", "ISC", "ICN", "G",
    "INP", "PIE", "T20",
    "PYI", "PT", "RSE", "RET",
    "SLF", "SLOT", "SIM",
    "TID", "TCH", "INT",
    "PTH", "TD", "FIX", "ERA",
    "PD", "PGH", "PL", "TRY",
    "NPY", "AIR", "PERF",
    "LOG", "RUF",
    # "ANN", "S", "CPY", "Q"
    # "ARG", "FLY", "FURB"
]

ignore = [
    "N818", "UP037", "FBT001", "B008",
    "COM819", "FA102", "PT013",
    "PT004", "TID252",
    "TCH002", "TCH001",
    "PLR2004", "RUF100",
    # should re-check
#    "PTH123",
]
exclude = [
    "*/migrations/*",
]

[tool.ruff.lint.mccabe]
max-complexity = 3

[tool.ruff.lint.pycodestyle]
max-line-length = 69

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
python_files = "*_tests.py"
timeout = 4
asyncio_mode = "strict"
addopts = "--color=yes"
cache_dir = "/tmp/.pytest_cache"

[tool.coverage.run]
omit = [
    "dodo.py", "db/env.py",
    "db/versions/*.py",
]
data_file = "/tmp/.coverage"

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == '__main__':",
]

[tool.mypy]
exclude = "db/env.py"
python_version = 3.12
ignore_missing_imports = true
cache_dir = "/tmp/.mypy_cache"
disable_error_code = "valid-type"
plugins = [
    "returns.contrib.mypy.returns_plugin",
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "common.sqlalchemy_error_handler"
ignore_errors = true

[tool.doit]
dep_file = "/tmp/.doit.db"
# flake8 doesn't support pyproject.toml and I hate black formatter

[tool.poetry]
name = "seed"
version = "0.1.0"
description = "seed"
authors = [
    "Nursultan Kassym <nursultan.kasym8@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
bcrypt = "^4.1.3"
boto3 = "^1.34.119"
celery = "^5.4.0"
email-validator = "^2.1.1"
fastapi = "^0.111.0"
hiredis = "^2.3.2"
ipython = "^8.25.0"
uvicorn = "^0.29.0"
orjson = "^3.10.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
PyJWT = "^2.8.0"
redis = "^5.0.4"
returns = "^0.22.0"
requests = "^2.32.3"
sentry-sdk = "^2.4.0"
SQLAlchemy = "^2.0.30"
wheel = "^0.43.0"
pydantic-settings = "^2.3.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
flake8 = "^7.0.0"
flake8-annotations-complexity = "^0.0.8"
flake8-commas = "^4.0.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.4.26"
flake8-builtins = "^2.5.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-fine-pytest = "^1.0.3"
flake8-functions = "^0.0.8"
flake8-logging-format = "^0.9.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.1.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest-style = "^2.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.21.0"
flake8-string-format = "^0.3.0"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.14.1"
mypy = "^1.10.0"
types-redis = "^4.6.0.20240425"
types-requests = "^2.32.0.20240602"
types-pyyaml = "^6.0.12.20240311"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.6"
pytest-flakefinder = "^1.1.0"
responses = "^0.25.0"
SQLAlchemy-Utils = "^0.41.1"
httpx = "^0.27.0"
blocklint = "^0.2.4"
ruff = "^0.4.0"
doit = "^0.36.0"
safety = "^3.2.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
